fix(auth): formSubtitle text align

--- a/src/feats/auth/pages/login/login.module.scss
+++ b/src/feats/auth/pages/login/login.module.scss
@@ -64,9 +64,12 @@
             }
 
             span.formSubtitle {
-                text-align: center;
                 color: var(--untitled-gray--400);
                 @include untitled-text-text-md-normal();
+                
+                @include lt-lg {
+                    text-align: center;
+                }
             }
 
             .checkbox {
